[gd_scene load_steps=8 format=4 uid="uid://jtrhq3vl5w5v"]

[ext_resource type="TileSet" uid="uid://drffhigt25v3k" path="res://wood.tres" id="1_55fqf"]
[ext_resource type="TileSet" uid="uid://dodaqulg6wo0p" path="res://terrain.tres" id="2_wn6d5"]
[ext_resource type="PackedScene" uid="uid://b7n633vhp7b16" path="res://World/plate.tscn" id="3_i2ob1"]
[ext_resource type="Script" uid="uid://dv8k7m8v0v3cy" path="res://Levels/door_controller_10.gd" id="4_d8hbd"]
[ext_resource type="PackedScene" uid="uid://dcmqg7wa7lk0g" path="res://door.tscn" id="5_k83ce"]
[ext_resource type="PackedScene" uid="uid://dwg6s6w4jsioy" path="res://World/collectible.tscn" id="6_lvjp3"]
[ext_resource type="PackedScene" uid="uid://de3ll5y5ohl3p" path="res://World/kill_brick.tscn" id="7_0es07"]

[node name="Level9" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAD+/wIAAAAAAAAAAAAAAAIAAAACAAAAAAACAAIAAAACAAAAAAAEAAIAAAACAAIAAAAGAAIAAAAAAAAAAAAIAAIAAAACAAAAAAAKAAIAAAACAAAAAAAMAAIAAAACAAIAAAAHAAYAAAACAAIAAAAJAAYAAAAAAAAAAAAFAAYAAAACAAAAAAADAAYAAAACAAAAAAABAAYAAAACAAAAAAALAAYAAAACAAAAAAANAAYAAAACAAIAAAD+/woAAAAAAAAAAAAAAAoAAAACAAAAAAACAAoAAAACAAAAAAAEAAoAAAACAAAAAAAGAAoAAAACAAAAAAAKAAoAAAACAAAAAAD//wYAAAACAAQAAGD//wgAAAACAAIAAFD//wQAAAAAAAAAAFAMAAoAAAAAAAQAAFAMAAgAAAAAAAAAAFA=")
tile_set = ExtResource("1_55fqf")

[node name="TileMapLayer2" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAIAA8ABAACAAAAAAAGAA8ABAAAAAAAAAAKAA8ABAAEAAAAAAA=")
tile_set = ExtResource("2_wn6d5")

[node name="Plate" parent="." instance=ExtResource("3_i2ob1")]
position = Vector2(184, 88)
plate_type = 1

[node name="Plate2" parent="." instance=ExtResource("3_i2ob1")]
position = Vector2(24, 152)
plate_type = 1

[node name="Plate3" parent="." instance=ExtResource("3_i2ob1")]
position = Vector2(72, 152)
plate_type = 1

[node name="DoorController10" type="Node2D" parent="."]
script = ExtResource("4_d8hbd")

[node name="Door" parent="DoorController10" instance=ExtResource("5_k83ce")]
position = Vector2(136, 168)
rotation = 1.5708

[node name="Collectible" parent="." instance=ExtResource("6_lvjp3")]
position = Vector2(136, 224)

[node name="KillBrick" parent="." instance=ExtResource("7_0es07")]
position = Vector2(2, 344)

[connection signal="depressed" from="Plate" to="DoorController10" method="_on_plate_depressed"]
[connection signal="pressed" from="Plate" to="DoorController10" method="_on_plate_pressed"]
[connection signal="depressed" from="Plate2" to="DoorController10" method="_on_plate_2_depressed"]
[connection signal="pressed" from="Plate2" to="DoorController10" method="_on_plate_2_pressed"]
[connection signal="depressed" from="Plate3" to="DoorController10" method="_on_plate_3_depressed"]
[connection signal="pressed" from="Plate3" to="DoorController10" method="_on_plate_3_pressed"]
